--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -24,15 +24,34 @@
 \title{Selección Dependiente Aleatoria}
 \author{Luis Felipe González Rivas}
 
-\maketitle
-% \tableofcontents
-
 \begin{document}
+\maketitle
 % \input{portada.tex}
 \input{introduccion.tex}
-\input{metodo-probabilistico.tex}
 \input{teoria-extremal.tex}
+\input{metodo-probabilistico.tex}
 \input{aplicaciones-drc.tex}
-\input{comparacion.tex}
+% \input{comparacion.tex}
 
 \end{document}
+
+
+% TODO:
+% En Introduccion
+% 1. reescribir conceptos de gráfica (no me gusta la función de incidencia)
+% 2. Demostrar que la gráficas de Turán son las que maximizan número de aristas
+% 3. Demostrar el lema del saludo (sin matrices)
+
+% TODO:
+% En Metodo probabilistico
+% 1. Introducir concepto de variable aleatoria, espacio muestral, valor esperado... linealidad
+% 2. Demostrar versión alternativa de DRC
+
+% TODO:
+% 1. Escribur sobre la subgráfica prohibida
+% 2. Reescribir teorema de turan
+% 3. Introducir números de Ramsey
+% 4. Poner demostración de número extremal para gráficas biparitas (original)
+% 5. Poner sección de números de Ramsey para cubos
+
+
