--- a/thesis/metodo-probabilistico.tex
+++ b/thesis/metodo-probabilistico.tex
@@ -1,57 +1,101 @@
 % \chapter{El Método Probabilístico}
 \section{El Método Probabilístico}
 El \textit{método probabilista} es una técnica importante en
-combinatoria. Con frecuencia, deseamos probar la existencia de
-ciertra propiedad u objeto. Para ello, el método probabilista construye
-de manera aleatoria este objeto con probabilidad mayor que cero.
+combinatoria para probar la existencia de cierta propiedad u objeto, pero en el
+que un método constructivo para hayarlo es complicado de idear.
+
+\begin{definition}[$\sigma$-álgebra]
+  Sea $\Omega$ un conjunto. Una $\sigma$-álgebra $\Sigma$ en $\Omega$ es una
+  familia de subconjuntos de $\Omega$ que satisface que
+  \begin{itemize}
+    \item $\varnothing$ y $\Omega $ son elementos de $\Sigma$.\\
+    \item Si $A \in \Sigma$, entonces $\Sigma \setminus A \in \Sigma$.\\
+    \item Si $\{A_n\}_{n\in \N}$ es una sucesión de elementos en
+      $\Sigma$, entonces
+      $$\bigcup_{n \in \N} A_n \in \Sigma.$$
+  \end{itemize}
+\end{definition}
+
+\begin{definition}[medida]
+  Una medida $\mu \Sigma: \rightarrow [0, \infty]$ es una función tal que
+  \begin{itemize}
+    \item $\mu(\varnothing) = 0$.\\
+    \item Para $\{A_n\}_{n\in \N}$ en $\Sigma$, con $A_m \cap A_n =
+      \varnothing$ si $m \neq n$, se tiene que
+      $$ \mu\left( \bigcup_{n \in \N} A_n \right) = \sum_{n \in \N} \mu(A_n).$$
+  \end{itemize}
+\end{definition}
+
+\begin{definition}[Espacio de Probabilidad]
+  Un espacio de probabilidad es una tripleta $(\Omega, \Sigma, Pr)$,
+  donde $\Sigma$ es una $\sigma$-álgebra en $\Omega$, $Pr$ es una
+  medida en $\Omega$ tal que $Pr(\Omega) = 1$. A los elementos de
+  $\Sigma$ les llamamos eventos.
+\end{definition}
+
+\begin{definition}[Variable Aleatoria]
+  Una variable aleatoria real en un espacio de probabilidad $(\Omega,
+  \Sigma, Pr)$ es una
+  función $X: \Omega \rightarrow \mathbb R$ $Pr$-medible. Esto es,
+  para todo $\alpha \in \mathbb R$
+$$\{\omega \in \mathbb R: X(\omega) \le \alpha \} \in \Sigma \}.$$
+\end{definition}
+
+\begin{definition}[Valor Esperado]
+El valor esperado de una variable aleatoria $X$ se define como
+$$\E[X] = \int_{\Omega} X(\omega) d Pr(\omega).$$
+\end{definition}
+
+Recuerde que la integral (de Lebesgue) satisface las propiedades de
+linealidad. Por lo que, el valor esperado satisface el siguiente Teorema.
 
 \begin{theorem}
-  Toda gráfica con $m$ vértices contiene una gráfica bipartita con $m
-  / 2$ aristas.
+    Sean $X_1, \ldots, X_n$ variables aleatorias y sean $X = c1 X_1 +
+    \ldots + c_n X_n$, donde $c_i$ son números reales. La
+    \textit{linealidad del valor esperado} establece que
+    $$ \E[X] = c_1 \E[X_1] + \ldots + c_n \E[X_n]. $$
 \end{theorem}
 
+\begin{theorem}
+    Toda gráfica con $m$ vértices contiene una gráfica bipartita con $m
+/ 2$ aristas.
+\end{theorem}
 \begin{proof}
-  Sea $G = (V, E)$ una gráfica. Asigne un color, blanco o negro, a
-  cada vértice de $G$  de manera uniforme e independiente.
+    Sea $G = (V, E)$ una gráfica. Asigne un color, blanco o negro, a
+    cada vértice de $G$  de manera uniforme e independiente.
 
-  Sea $E^\prime$ el conjunto de aristas con un extremo negro y otro
-  blanco. La gráfica $H = (V, E^\prime)$ es una subgráfica bipartita de $G$.
-  Toda arista de $G$ pertenece a $E^\prime$ con probabilidad $1/2$.
-  Por linealidad del valor esperado, el tamaño esperado de $E^\prime$ es
-  $$\E[\vert E^\prime \vert] = \frac{1}{2} \vert E \vert.$$
-  Entonces existe una coloración de tal manera que $\vert E^\prime
-  \vert \ge \frac{1}{2}\vert E \vert$. La gráfica $H = (V, E^\prime)$
-  es la subgráfica deseada.
+    Sea $E^\prime$ el conjunto de aristas con un extremo negro y otro
+    blanco. La gráfica $H = (V, E^\prime)$ es una subgráfica bipartita de $G$.
+    Toda arista de $G$ pertenece a $E^\prime$ con probabilidad $1/2$.
+    Por linealidad del valor esperado, el tamaño esperado de $E^\prime$ es
+    $$\E[\vert E^\prime \vert] = \frac{1}{2} \vert E \vert.$$
+    Entonces existe una coloración de tal manera que $\vert E^\prime
+    \vert \ge \frac{1}{2}\vert E \vert$. La gráfica $H = (V, E^\prime)$
+    es la subgráfica deseada.
 \end{proof}
 
-\section{La linealidad del valor esperado}
-Sean $X_1, \ldots, X_n$ variables aleatorias y sean $X = c1 X_1 + \ldots + c_n X_n$, donde $c_i$ son números reales. La \textit{linealidad del valor esperado} establece que 
-$$ \E[X] = c_1 \E[X_1] + \ldots + c_n \E[X_n]. $$
-\section{Desigualdad de Jensen}
+% \section{Desigualdad de Jensen}
+%
+% \section{Zerekiewiecz}
 
-\section{Zerekiewiecz}
-
-\section{Kovari-Sos-Turán}
-
+\subsection{Kovari-Sos-Turán}
 \begin{theorem}[Kovari-Sos-Turán]
-  Sean $2 \leq s \leq t$ y sea $K_{s,t}$ la gráfica bipartita
-  completa con $s + t$ vértices. Entonces existe una constante $c =
-  c(s, t) > 0$ tal que
-  la gráfica en $n$ vértices que no contiene una copia de $K_{s, t}$
-  tiene a lo más
-  $c n^{2 - 1/s}$ aristas.
+    Sean $2 \leq s \leq t$ y sea $K_{s,t}$ la gráfica bipartita
+    completa con $s + t$ vértices. Entonces existe una constante $c =
+    c(s, t) > 0$ tal que
+    la gráfica en $n$ vértices que no contiene una copia de $K_{s, t}$
+    tiene a lo más
+    $c n^{2 - 1/s}$ aristas.
 \end{theorem}
 \begin{proof}
-  Sea $G$ una gráfica con a lo más $cn^{2 - 1/s}$ aristas.
-  Sea $\{u_1, \ldots, u_t\}$ un subconjunto de $t$ vértices de $G$.
-
-  Etiquete
-  los vértices de $G$ como $v_1, \ldots, v_n$. Para cada vértice
-  $v_i$, existen exactamente $\binom{d(v_i)}{t}$ conjuntos $\{v_1,
-  \ldots, v_t\}$
+Sea $G$ una gráfica con a lo más $cn^{2 - 1/s}$ aristas.
+Sea $\{u_1, \ldots, u_t\}$ un subconjunto de $t$ vértices de $G$.
+Etiquete los vértices de $G$ como $v_1, \ldots, v_n$. Para cada vértice
+$v_i$, existen exactamente $\binom{d(v_i)}{t}$ conjuntos $\{v_1,
+\ldots, v_t\}$
 \end{proof}
 
-\section{Selección Dependiente Aleatoria}
+\subsection{Selección Dependiente Aleatoria}
 Para un vértice $v$ en una gráfica $G$, sea $N(v)$ el conjunto de
 vecinos de $v$ en $G$. Dado un subconjunto de vértices $U \subset
 V(G)$, la \textit{vecindad común} $N(U)$ de $U$ en $G$ es el conjunto
@@ -61,89 +105,89 @@ conjunto, denotaremos a $\binom{A}{d}$ como la familia de
 $d-$subconjuntos de $A$.
 
 \begin{theorem}
-  Sea $t$ un entero positivo. Sea $G$ una gráfica en $n$ vértices con
-  grado promedio $d = \epsilon n$.
-  Entonces $G$ continee un conjunto de $t$ vértices cuya vecindad
-  tiene al menos $\epsilon^t n - \binom{t}{2}$ vecinos en común.
+Sea $t$ un entero positivo. Sea $G$ una gráfica en $n$ vértices con
+grado promedio $d = \epsilon n$.
+Entonces $G$ continee un conjunto de $t$ vértices cuya vecindad
+tiene al menos $\epsilon^t n - \binom{t}{2}$ vecinos en común.
 \end{theorem}
 \begin{proof} %TODO: proof
-  Sean $v_1, \ldots, v_t$ vértices seleccionados uniformemente en
-  $V(G)$ y sea $T = \{v_1, \ldots, v_t\}$. Para un vértice $u$, la
-  probabilidad que $u$ es una vecino en común de $T$ es
-  $\left(\frac{d(v)}{n}\right)^t$.
-  Por tanto, si $A = N(T)$, se tiene que
-  \begin{eqnarray*}
-    E[\vert A \vert] &=& \sum_{v \in V(G)} Pr(v \in A) \\
-    &=& \sum_{v \in V(G)} \left(\frac{d(v)}{n} \right)^t \\
-    &\ge& n \left(\frac{d}{n}\right)^t\\
-    &=& \epsilon^t n,
-  \end{eqnarray*}
-  donde la desigualdad se sigue de la convexidad de la función $z \mapsto z^t$.
-  Por tanto, existe una elección del conjunto $T$ con al menos $\epsilon^t n $.
+Sean $v_1, \ldots, v_t$ vértices seleccionados uniformemente en
+$V(G)$ y sea $T = \{v_1, \ldots, v_t\}$. Para un vértice $u$, la
+probabilidad que $u$ es una vecino en común de $T$ es
+$\left(\frac{d(v)}{n}\right)^t$.
+Por tanto, si $A = N(T)$, se tiene que
+\begin{eqnarray*}
+  E[\vert A \vert] &=& \sum_{v \in V(G)} Pr(v \in A) \\
+  &=& \sum_{v \in V(G)} \left(\frac{d(v)}{n} \right)^t \\
+  &\ge& n \left(\frac{d}{n}\right)^t\\
+  &=& \epsilon^t n,
+\end{eqnarray*}
+donde la desigualdad se sigue de la convexidad de la función $z \mapsto z^t$.
+Por tanto, existe una elección del conjunto $T$ con al menos $\epsilon^t n $.
 
-  Note que es posible que en la elección de $T$ existan vértices
-  repetidos, esto es, $\vert T \vert < t$. Note que $Pr(v_i = v_j) =
-  1 / n$, entonces
-  $Pr(\vert T \vert < t) \le \binom{t}{2} / n$. Dado que todo
-  vértices $v$ satisface que
-  $d(v) < n$, entonces
-  \begin{eqnarray*}
-    \epsilon^t n &\le& E[\vert A \vert] \\
-    &=& E[\vert A \vert | \vert T \vert = t] Pr(\vert T \vert = t) +
-    E[\vert A \vert | \vert T \vert < t] Pr(\vert T \vert < t)  \\
-    &\le& E[\vert A \vert | \vert T \vert = t] + \binom{t}{2}
-  \end{eqnarray*}
+Note que es posible que en la elección de $T$ existan vértices
+repetidos, esto es, $\vert T \vert < t$. Note que $Pr(v_i = v_j) =
+1 / n$, entonces
+$Pr(\vert T \vert < t) \le \binom{t}{2} / n$. Dado que todo
+vértices $v$ satisface que
+$d(v) < n$, entonces
+\begin{eqnarray*}
+  \epsilon^t n &\le& E[\vert A \vert] \\
+  &=& E[\vert A \vert | \vert T \vert = t] Pr(\vert T \vert = t) +
+  E[\vert A \vert | \vert T \vert < t] Pr(\vert T \vert < t)  \\
+  &\le& E[\vert A \vert | \vert T \vert = t] + \binom{t}{2}
+\end{eqnarray*}
 \end{proof}
 
 \begin{theorem}(Lema Básico)\label{drc}
-  Sean $d, m, n, r, u$ enteros positivos. Sea $G$ una gráfica en
-  $n$ vértices y grado promedio $d$. Si existe
-  entero positivo $t$
-  tal que
-  $$\frac{d^t}{n^{t-1}} - \binom{n}{r} \left(\frac{m}{n}\right)^t \geq u$$
-  entonces $G$ contiene un conjunto $U \subset V(G)$ de vértices tal que
-  $\vert U \vert \geq u$ y tal que todo subconjunto $S$ de $U$ con
-  $\vert S \vert = r$
-  tiene al menos $m$ vecinos en común.
+Sean $d, m, n, r, u$ enteros positivos. Sea $G$ una gráfica en
+$n$ vértices y grado promedio $d$. Si existe
+entero positivo $t$
+tal que
+$$\frac{d^t}{n^{t-1}} - \binom{n}{r} \left(\frac{m}{n}\right)^t \geq u$$
+entonces $G$ contiene un conjunto $U \subset V(G)$ de vértices tal que
+$\vert U \vert \geq u$ y tal que todo subconjunto $S$ de $U$ con
+$\vert S \vert = r$
+tiene al menos $m$ vecinos en común.
 \end{theorem}
 \begin{proof}
-  Seleccione $t$ vértices $v_1, \ldots, v_t$ elegidos uniformemente
-  con repetición y defina $T = \{v_1, \ldots, v_t\}$. Sea $A = N(T)$,
-  la vecindad de $T$ en $G$. ¿Cuál es la cardinalidad de $A$? Por
-  linealidad del valor esperado, se tiene que
-  \begin{eqnarray*}
-    E[\vert A \vert] &=& \sum_{v \in V(G)} Pr(v \in A)\\
-    &=& \sum_{v \in V(G)} \left(\frac{\vert N(v) \vert}{n} \right)^t\\
-    &=& n^{-t} \sum_{v \in V(G)} \vert N(v) \vert^t \\
-    &\ge& n^{1-t}\left( \frac{\sum_{v \in V(G)} \vert N(v) \vert}{n} \right)^t\\
-    &=& \frac{d^t}{n^{t-1}},
-  \end{eqnarray*}
-  donde la desigualdad se debe a la convexidad de la función $z \mapsto z^t$.
+Seleccione $t$ vértices $v_1, \ldots, v_t$ elegidos uniformemente
+con repetición y defina $T = \{v_1, \ldots, v_t\}$. Sea $A = N(T)$,
+la vecindad de $T$ en $G$. ¿Cuál es la cardinalidad de $A$? Por
+linealidad del valor esperado, se tiene que
+\begin{eqnarray*}
+  E[\vert A \vert] &=& \sum_{v \in V(G)} Pr(v \in A)\\
+  &=& \sum_{v \in V(G)} \left(\frac{\vert N(v) \vert}{n} \right)^t\\
+  &=& n^{-t} \sum_{v \in V(G)} \vert N(v) \vert^t \\
+  &\ge& n^{1-t}\left( \frac{\sum_{v \in V(G)} \vert N(v) \vert}{n} \right)^t\\
+  &=& \frac{d^t}{n^{t-1}},
+\end{eqnarray*}
+donde la desigualdad se debe a la convexidad de la función $z \mapsto z^t$.
 
-  Sea $Y$ la variable aleatoria que cuenta
-  el número de conjuntos $S$ en $\binom{A}{r}$ que tienen menos de
-  $m$ vecinos en común. Note que la probabilidad de que un
-  $r-$conjunto de vértices cualquiera sea subconjunto de $A$ es
-  $\left( \frac{\vert N(S) \vert}{n}\right)^t$. A lo más existen
-  $\binom{n}{r}$ subconjuntos $r-$subconjuntos con $\vert N(S)\vert < m$. Luego,
-  $$ E[Y] < \binom{n}{r}\left(\frac{m}{n}\right)^t. $$
-  Por linealidad del valor esperado,
-  $$E[X - Y] \geq \frac{d^t}{n^{t-1}} - \binom{n}{r}\left(\frac{m}{n}
-  \right)^t  \ge u.$$
-  Por tanto existe una elección de $T$ en el cual el conjunto $A =
-  N(T)$ satisface que $X - Y \ge u$.
-  Sea $U$ el conjunto resultante al borrar un vértice de cada
-  $r$-subconjunto $S$ de $A$ que tenga menos de $m$ vecinos en común.
-  Entonces $\vert U \vert \ge u$ y todos los $r-$subconjuntos de $U$
-  tienen al menos $m$ vecinos en común.
+Sea $Y$ la variable aleatoria que cuenta
+el número de conjuntos $S$ en $\binom{A}{r}$ que tienen menos de
+$m$ vecinos en común. Note que la probabilidad de que un
+$r-$conjunto de vértices cualquiera sea subconjunto de $A$ es
+$\left( \frac{\vert N(S) \vert}{n}\right)^t$. A lo más existen
+$\binom{n}{r}$ subconjuntos $r-$subconjuntos con $\vert N(S)\vert < m$. Luego,
+$$ E[Y] < \binom{n}{r}\left(\frac{m}{n}\right)^t. $$
+Por linealidad del valor esperado,
+$$E[X - Y] \geq \frac{d^t}{n^{t-1}} - \binom{n}{r}\left(\frac{m}{n}
+\right)^t  \ge u.$$
+Por tanto existe una elección de $T$ en el cual el conjunto $A =
+N(T)$ satisface que $X - Y \ge u$.
+Sea $U$ el conjunto resultante al borrar un vértice de cada
+$r$-subconjunto $S$ de $A$ que tenga menos de $m$ vecinos en común.
+Entonces $\vert U \vert \ge u$ y todos los $r-$subconjuntos de $U$
+tienen al menos $m$ vecinos en común.
 \end{proof}
 
 \begin{theorem}
-  Si $\epsilon > 0$ y $d\leq n$ son enteros positivos, y $G = (V, E)$
-  es una gráfica con
-  $N > 4d\epsilon^{-d}n$ vértices y al menos $\epsilon N^2 / 2$
-  aristas, entonces existe un
-  subconjunto $U$ de vértices de $G$ con $\vert U \vert > 2n$ tal que
-  la fracción de $d-$conjuntos $S \subset U$ con $\vert N(S) < n$ es
-  menor que $(2d)^{-d}$.
+Si $\epsilon > 0$ y $d\leq n$ son enteros positivos, y $G = (V, E)$
+es una gráfica con
+$N > 4d\epsilon^{-d}n$ vértices y al menos $\epsilon N^2 / 2$
+aristas, entonces existe un
+subconjunto $U$ de vértices de $G$ con $\vert U \vert > 2n$ tal que
+la fracción de $d-$conjuntos $S \subset U$ con $\vert N(S) < n$ es
+menor que $(2d)^{-d}$.
 \end{theorem}
