--- a/thesis/aplicaciones-drc.tex
+++ b/thesis/aplicaciones-drc.tex
@@ -65,4 +65,29 @@
     tamaño $2^{r-1}$, podemos encontrar un encaje de $Q_r$ en $G$ tal
     y como lo hicimos en el Teorema \ref{turan-drc}
   \end{proof}
+
+  \begin{theorem}
+    Sea $H$ una gráfica bipartita con $n$ vértceds y grado máximo
+    $\Delta \ge 1$.
+    Si $\epsilon > 0$ y $G$ es una gráfica con $N \ge 8\Delta
+    \epsilon^{-\Delta}n$
+    vértices y al menos $\epsilon \binom{N}{2}$ aristas, entonces $H$
+    es una subgráfica
+    de $G$.
+  \end{theorem}
+
+  \begin{corollary}
+    Si $H$ es una gráfica bipartita en $n$ vértices y grado máximo
+    $\Delta \ge 1$, entonces $r(H) \ge \Delta 2^{\Delta + 3}$. En particular,
+    el número de Ramsey para el $d$-cubo $Q_d$ es a lo más $d 2^{2d + 3}$.
+  \end{corollary}
+
+  \begin{theorem}
+    Sea $H$ una gráfica biparita en $n$ vértices con grado máximo
+    $d$. Si una gráfica $G$ contiene a un subconjunto $U$ con $\vert
+    U \vert > 2n$ y tal que la fracción de $d$-conjuntos en $U$ con
+    menos de $n$ vecinos en común es menor que $(2d)^{-d}$, entonces
+    $G$ contiene a una copia de $H$.
+  \end{theorem}
+
   % \section{Un Problema del tipo Turán-Ramsey para Gráficas libres de $K_4$}
