--- a/thesis/aplicaciones-drc.tex
+++ b/thesis/aplicaciones-drc.tex
@@ -67,7 +67,7 @@
   \end{proof}
 
   \begin{theorem}
-    Sea $H$ una gráfica bipartita con $n$ vértceds y grado máximo
+    Sea $H$ una gráfica bipartita con $n$ vértices y grado máximo
     $\Delta \ge 1$.
     Si $\epsilon > 0$ y $G$ es una gráfica con $N \ge 8\Delta
     \epsilon^{-\Delta}n$
